style.css
body {
  /* Set line height to 1.5 times the font size
	   and use the OS’s UI font as the website font
	 */
  font: 100%/1.5 system-ui;
  max-width: 100ch;
  margin-inline: auto;
  padding: 1rem;
}

nav ul,
nav li {
  display: contents;
}

nav {
  display: flex;
  border-bottom: 1px solid oklch(80% 3% 200);
  margin-bottom: 1rem;
}

nav a {
  flex: 1;
  text-decoration: none;
  color: inherit;
  text-align: center;
  padding: 0.5em;
}

nav a.current {
  border-bottom: 0.4em solid oklch(80% 3% 200);
  padding-bottom: 0.1em;
}

html {
  --color-accent: oklch(70% 40% 220);
  accent-color: var(--color-accent);
}

nav a:hover {
  border-bottom: 0.4em solid var(--color-accent);
  background-color: oklch(from var(--color-accent) 95% 5% h);
}

input, textarea, button {
  font: inherit;
}

form {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 1em;
}

label {
  display: grid;
  grid-template-columns: subgrid;
  grid-column: 1 / -1;
}

button {
  grid-column: 1 / -1;
}

.projects{
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
  gap: 1em;
}

.projects article {
  display: grid;
  grid-template-rows: subgrid;
  grid-row: span 3;
  gap: 1em;
}

.projects article h2 {
  margin: 0;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.1;
  text-wrap: balance;
  margin: 0;
}

h1 {
  font-size: 4em;
}

.cv-page {
  font-size: 1.1rem;
  line-height: 1.6;
}

.cv-page h2 {
  font-size: 2em;
  margin-top: 2em;
  margin-bottom: 0.5em;
  font-weight: bold;
}

.cv-page article h3 {
  font-size: 1.3em
}

